--- a/style.css
+++ b/style.css
@@ -1,4 +1,61 @@
-html {
-  background: red;
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+* {
+  font-family: 'Montserrat', sans-serif;
+  color: #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: #291C3B;
+  width: 100%;
+  height: 100vh;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.title-container h1 {
+  font-size: 1.5rem;
+}
+
+.skeleton {
+  width: 90%;
+  max-width: 450px;
+  margin: 30px;
+}
+
+.time-counter {
+  font-size: 1.5rem;
+}
+
+.credits-footer {
+  text-align: center;
+  margin: 55px;
+  opacity: 30%;
+  font-size: 0.7rem;
+  margin-bottom: -15px;
+}
+
+.content-container {
+  margin: 35px;
 }
 /*# sourceMappingURL=style.css.map */
